<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="pwr.edu.mymlkit.text.TextRecognitionViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/card" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/actionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:orientation="horizontal">

            <Button
                android:id="@+id/select_image_bt"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_image_bt"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/recognize_text_bt"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/recognize_text_bt"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recognize_text_bt"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/select_image_bt"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/actionContainer"
            android:autofillHints="@string/edit_text_txt"
            android:background="@android:color/transparent"
            android:enabled="false"
            android:gravity="top"
            android:hint="@string/edit_text_txt"
            android:inputType="textMultiLine"
            android:nestedScrollingEnabled="true"
            android:padding="10dp"
            android:text="@{viewModel.tagsText}" />
    </RelativeLayout>
</layout>
