<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="pwr.edu.mymlkit.image.PickImageViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".image.PickImageFragment">

        <ImageView
            android:id="@+id/pick_imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toTopOf="@+id/pick_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/object_detection"
            tools:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/pick_textView"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@{viewModel.tagsText}"
            app:layout_constraintBottom_toTopOf="@+id/pick_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/app_name" />

        <Button
            android:id="@+id/pick_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:text="@string/pick_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/take_foto_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/take_foto_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_foto_button"
            app:layout_constraintBottom_toBottomOf="@+id/pick_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/pick_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
